# CompilerLab

./: pyproject.toml
Stage_0/Lex/: 1  1.l  2  2.l  3  3.l  4  4.l  Makefile  in_1  in_2  in_3  in_4  lex.yy.c  temp.l
Stage_0/LexYacc/: 1  1.l  1.y  2  2.y  3  3 copy.y  3.y  Makefile  e_1  e_1.y  e_2  e_2.y  e_3  e_3.l  e_3.y  lex.yy.c  temp  temp.l  temp.y  test  test.l  test.y  y.tab.c  y.tab.h
Stage_0/XSM/: e_1.xsm  e_2.xsm  line.py
Stage_0/Yacc/: for  for.y  if  if.y  in_for  in_if  in_var  temp  temp.y  test.y  var  var.y
Stage_1/: 1  1.l  1.xsm  1.y  2.xsm  custom.h  e_1_post  e_1_post.l  e_1_post.y  e_1_pre  e_1_pre.y  e_2  e_2.y  e_3  e_3.y  lex.yy.c  make  y.tab.c  y.tab.h
Stage_2/: 1.xsm  custom.h  e_1.l  e_1.y  i2  lex.yy.c  t_1  t_1.l  t_1.y  t_2  t_2.y  tree.h  y.tab.c  y.tab.h
Stage_3/: 3.xsm  4.xsm  Temp.xsm  custom.h  e_1  e_1.l  i1  i2  i3  label  label.l  lex.yy.c  t_2  t_2.y  t_3  t_3.l  t_3.y  tree.h  y.tab.c  y.tab.h
Stage_4/: 1.xsm  2.xsm  3.xsm  4.xsm  5.xsm  Temp_2.xsm  Temp_3.xsm  Temp_4.xsm  Temp_5.xsm  custom.h  i1  i2  i3  i4  i5  label  label.l  lex.yy.c  t_1  t_1.y  t_2  t_2.l  t_2.y  y.tab.c  y.tab.h
Stage_5/: 0.xsm  1.xsm  2.xsm  3.xsm  4.xsm  5.xsm  6.xsm  7.xsm  8.xsm  Temp_1.xsm  Temp_2.xsm  Temp_3.xsm  Temp_4.xsm  Temp_5.xsm  Temp_6.xsm  Temp_7.xsm  Temp_8.xsm  compile  custom.h  i1  i1_2  i2  i3  i4  i5  i8  input  label  label.l  lex.yy.c  t_1  t_1.l  t_1.y  temp  tree.h  y.tab.c  y.tab.h
Stage_6/: compile  custom.h  t_1.l
Trials/C++/: modelica.g4  modelicaBaseListener.h  modelicaLexer.cpp  new.l  (+4 more)
XSM/: xsm
(+21 files in other folders)
