[tool.poetry]
name = "compilerlab"
version = "0.1.0"
description = ""
authors = ["CodeWizard <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"
sly = "^0.4"
antlr4-python3-runtime = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
